Cleanup NormalizedNodeStreamReaderWriterTest
Use assertThrows() and make a few cleanups.

Change-Id: Idd87668118569881c3c4cda43451c152f89a15f4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>